<resources>
    <string name="app_name">FinalReview</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="sales_hint">Sales</string>
    <string name="score_hint">Score</string>
    <string name="website_hint">Website</string>
    <string name="license_hint">License</string>
    <string name="next_activity">go to 2nd activity</string>
    <string name="Activity_2_name">Activity Two</string>
    <string name="received_info_tv">Received Info</string>
    <string name="back_button">back</string>

</resources>